<package>
  <name>seekurjr_gazebo</name>
  <version>0.3.0</version>
  <description>seekurjr_gazebo contains URDF xacro macros for SeekurJr.</description>
  <maintainer email="kpykcb@gmail.com">Oleksandr Lavrushchenko</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/seekurjr_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kpykcb@gmail.com">Oleksandr Lavrushchenko</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>xacro</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
